Bug 990973 - In-content prefs: scrollbars appear in a wrong position. r=jaws
UltraBlame original commit: 489aa6e7e740e141e648cbeb8e16d33b751292c1

--- a/browser/themes/shared/incontentprefs/preferences.css
+++ b/browser/themes/shared/incontentprefs/preferences.css
@@ -193,20 +193,12 @@ main
 -
 content
 {
-max
--
-width
+padding
 :
-800px
+40px
+48px
+48px
 ;
-}
-prefpane
->
-.
-content
--
-box
-{
 overflow
 :
 auto
@@ -214,11 +206,15 @@ auto
 }
 prefpane
 {
+max
+-
+width
+:
+800px
+;
 padding
 :
-40px
-48px
-48px
+0
 ;
 font
 -
@@ -261,7 +257,7 @@ box
 {
 overflow
 :
-auto
+visible
 ;
 }
 /
